force-app/main/default/objects/Reference_Checks_Details__c/Reference_Checks_Details__c.object-meta.xml
<CustomObject>
    <label>Reference Checks Details</label>
    <nameField>
        <displayFormat>RCD-{0000}</displayFormat>
        <label>Reference Checks Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Checks Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>