force-app/main/default/objects/Reference_Checks_Details__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User Assignment for this bluesheet checklist and approval</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Checks_Details</relationshipName>
    <type>Lookup</type>
</CustomField>