force-app/main/default/objects/Reference_Checks_Details__c/fields/Check_type__c.field-meta.xml
<CustomField>
    <fullName>Check_type__c</fullName>
    <formula>TEXT(Reference_Checks__r.Checklist_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check type</label>
    <type>Text</type>
</CustomField>