force-app/main/default/objects/Reference_Checks_Details__c/fields/Reference_Checks__c.field-meta.xml
<CustomField>
    <fullName>Reference_Checks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Checks</label>
    <referenceTo>Reference_Checks__c</referenceTo>
    <relationshipLabel>Reference Checks Details</relationshipLabel>
    <relationshipName>Reference_Checks_Details</relationshipName>
    <type>Lookup</type>
</CustomField>